--- a/public/css/forum-diskusi.css
+++ b/public/css/forum-diskusi.css
@@ -1,3 +1,6 @@
+body {
+    background: #fafdff;
+}
 /* Twitter-like forum post styling for upload-berkas.css */
 .forum-twitter-container {
     width: 80vw;
